devops/gitlab/1_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    name: devops
